# discode

./: .gitignore  README.md  docker-compose.yml
assets/diagrams/: architecture.drawio  backend-modules.drawio  desktop.drawio  er-diagram.drawio  frontend.drawio
discode-backend/: .gitignore  Dockerfile  README.md  pom.xml
discode-backend/scripts/: deploy.sh  package.sh
discode-backend/sql/: create_database.sql  drop_database.sql
discode-backend/src/main/kotlin/com/discode/backend/: BackendApplication.kt
discode-backend/src/main/kotlin/com/discode/backend/config/: SecurityConfiguration.kt
discode-backend/src/main/kotlin/com/discode/backend/controllers/: AccessController.kt  AuthController.kt  ChatController.kt  ResourceController.kt  UserController.kt
discode-backend/src/main/kotlin/com/discode/backend/interfaces/: AuthInterface.kt  AuthServiceInterface.kt  ChatInterface.kt  ChatServiceInterface.kt  ImageServiceInterface.kt  ImageStorageInterface.kt  UserInterface.kt  UserServiceInterface.kt
discode-backend/src/main/kotlin/com/discode/backend/models/: AuthResponse.kt  Chat.kt  ChatMember.kt  Message.kt  RegistrationRequest.kt  RegistrationResponse.kt  User.kt  UserCredentials.kt  UserProfile.kt
discode-backend/src/main/kotlin/com/discode/backend/persistence/: ChatRepository.kt  CustomQueryRepository.kt  GenericQueryRepository.kt  NamedParameterBase.kt  ReportRepository.kt  RepositoryBase.kt  UserBanRepository.kt  UserRepository.kt
discode-backend/src/main/kotlin/com/discode/backend/responses/: AuthenticationResponse.kt  RegistrationResponse.kt
discode-backend/src/main/kotlin/com/discode/backend/security/: Encoder.kt  SimpleUserDetails.kt  SimpleUserDetailsService.kt  WebCorsFilter.kt  (+1 more)
discode-backend/src/main/resources/: application.properties
discode-backend/src/test/kotlin/com/discode/backend/: BackendApplicationTests.kt
discode-chat/: Dockerfile  package.json  server.mjs  test.js
discode-desktop/: CMakeLists.txt  README.md  main.cpp  qml.qrc
discode-desktop/cmake/: deploy_qt.cmake
discode-desktop/common/: CMakeLists.txt  ban.h  ban_model_roles.h  report.h  report_model_roles.h  service_ips.h  service_routes.h  session.h
discode-desktop/config/: ips.cfg  routes.cfg
discode-desktop/controller/: CMakeLists.txt  authentication_controller.cpp  authentication_controller.h  ban_controller.cpp  ban_controller.h  navigation_controller.cpp  navigation_controller.h  report_controller.cpp  report_controller.h
discode-desktop/model/: CMakeLists.txt  ban_model.cpp  ban_model.h  report_model.cpp  report_model.h
discode-desktop/network/: CMakeLists.txt  api_config.h  authentication_service.cpp  authentication_service.h  ban_service.cpp  ban_service.h  network_helpers.h  report_service.cpp  report_service.h  session_service.cpp  session_service.h
discode-desktop/view/: CMakeLists.txt  main.qml
discode-desktop/view/buttons/: DButton.qml  DTabButton.qml  IconOnlyButton.qml
discode-desktop/view/images/: DiscodeLogo.qml
discode-desktop/view/inputs/: DTextField.qml  SecretField.qml
discode-desktop/view/labels/: DLabel.qml  DText.qml  DTextEdit.qml
discode-desktop/view/lists/: BanDelegate.qml  ReportDelegate.qml
discode-desktop/view/others/: BanPopup.qml  Header.qml  InfoPopup.qml
discode-desktop/view/pages/: BansPage.qml  LoginPage.qml  MainPage.qml  ReportsPage.qml
discode-desktop/view/resources/: Colors.qml  Font.qml
discode-web/: Dockerfile  README.md  angular.json  karma.conf.js  ng.conf  package-lock.json  package.json
discode-web/src/: colors.scss  index.html  main.ts  styles.scss
discode-web/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.module.ts
discode-web/src/app/authentication/: authentication-routing.module.ts  authentication.component.html  authentication.component.scss  authentication.module.ts
discode-web/src/app/authentication/login/: login.component.html  login.component.scss  login.component.ts
discode-web/src/app/authentication/models/: login.model.spec.ts  login.model.ts  register.model.spec.ts  register.model.ts
discode-web/src/app/authentication/register/: register.component.html  register.component.ts
discode-web/src/app/authentication/services/: login.service.ts  register.service.ts
discode-web/src/app/home/: home.component.html  home.component.scss  home.component.ts  home.module.ts
discode-web/src/app/home/chat-room/: chat-room.component.html  chat-room.component.scss  chat-room.component.ts
discode-web/src/app/home/message/: message.component.html  message.component.scss  message.component.ts
discode-web/src/app/home/models/: chat.model.spec.ts  chat.model.ts  member.model.ts  message.model.ts
discode-web/src/app/profile/: profile.component.html  profile.component.scss  profile.component.ts  profile.module.ts
discode-web/src/app/shared/: shared.module.ts
discode-web/src/app/shared/components/footer/: footer.component.html  footer.component.scss
discode-web/src/app/shared/components/header/: header.component.html  header.component.scss  header.component.ts
discode-web/src/app/shared/guards/: auth.guard.ts
discode-web/src/app/shared/interceptors/: authorization.interceptor.ts
discode-web/src/app/shared/models/: user.model.ts
discode-web/src/app/shared/service/: user.service.ts
discode-web/src/app/shared/services/: chat.service.ts  code.service.ts  messages.service.ts  user.service.ts
docker/: README.md  deploy.sh
docker/db/: init_database.sql
(+111 files in other folders)
